adding graph structure diagram to readme and additional charts to the output on the main page

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ langsmith==0.7.1
 orjson==3.11.7
 ormsgpack==1.12.2
 packaging==26.0
+plotly
 pydantic==2.12.5
 pydantic_core==2.41.5
 python-dotenv==1.2.1
